@@ -32,7 +32,9 @@ rpm: $(generated)
 	$(RM) pghoard-rpm-src.tar
 
 build-dep-fed:
-	sudo dnf -y install postgresql-server \
+	sudo dnf -y install \
+		golang \
+		postgresql-server \
 		python3-boto python3-cryptography python3-dateutil python3-devel \
 		python3-flake8 python3-psycopg2 python3-pylint python3-pytest \
 		python3-pytest-cov python3-requests python3-snappy \
