@@ -3,6 +3,9 @@ pghoard X.X.X (XXXX-XX-XX)
 
 * `local-tar` backups are now split to roughly 2 gigabyte chunks of
   plain-text files
+* Alternative `pghoard_postgres_command` implementation in Go for faster
+  startup times.  The time that the Python implementation takes to start
+  limits WAL restore throughput quite a bit
 
 pghoard 1.5.0 (2017-06-07)
 ==========================
